# Flask_api

./: README.md  pyproject.toml
migrations/versions/: d46330080220_initial_migration.py
src/: app.py  config.py  extensions.py  schemas.py  utils.py
src/controllers/: auth.py  post.py  role.py  user.py
src/instance/: blog.sqlite
src/models/: __init__.py  base.py  post.py  role.py  user.py
src/views/: role.py  user.py
